--- a/app/src/main/res/layout/factlist.xml
+++ b/app/src/main/res/layout/factlist.xml
@@ -14,7 +14,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/icon1"/>
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -25,10 +25,4 @@
             android:paddingRight="10dp"
             android:paddingBottom="5dp"/>
      </LinearLayout>
-<!--<View-->
-    <!--android:id="@+id/left_seperator"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:layout_margin="5dp"-->
-    <!--android:background="@android:color/white" />-->
 </LinearLayout>
