--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
+<menu
       xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_prev"
         android:title="@string/action_prev"
         android:enabled="true"
         android:icon="@android:drawable/ic_media_previous">
-    </item>
-    <item
-        android:id="@+id/action_best"
-        android:title="@string/action_best"
-        android:enabled="true"
-        android:icon="@android:drawable/ic_menu_upload">
-    </item>
-    <item
-        android:id="@+id/action_go"
-        android:title="@string/action_go"
-        android:enabled="true"
-        android:icon="@android:drawable/ic_menu_recent_history">
     </item>
     <item
         android:id="@+id/action_next"
