--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -23,7 +23,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="16dp"
-                android:src="@mipmap/icon1"
+                android:src="@mipmap/default_icon"
                 />
 
             <TextView
