--- a/app/src/main/res/menu/detailed_menu.xml
+++ b/app/src/main/res/menu/detailed_menu.xml
@@ -11,4 +11,9 @@
         android:title="Save"
         android:icon="@android:drawable/ic_menu_save"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/mDelete"
+        android:title="Delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        app:showAsAction="always" />
 </menu>
